# Real-Time-Intelligent-Data-Stream-Query-Assistant

./: COMPREHENSIVE_SYSTEM_DESIGN.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/api/: main.py
app/api/routers/: query.py
app/mcp/: server.py  tool_registry.py
app/mcp/tools/: analyze_fraud.py  query_database.py
app/mcp/types/: tool_io.py
app/services/fraud_engine/: engine.py
app/services/query_engine/: engine.py
docs/: SYSTEM_DESIGN.md  TECHNICAL_ARCHITECTURE.md
real_time_intelligent_data_stream_query_assistant.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
