[project]
name = "real-time-intelligent-data-stream-query-assistant"
version = "0.1.0"
description = "Phase 1: MCP server, FastAPI API, query-first fraud analysis scaffolding"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Your Team" }
]
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.7.0",
  "redis>=5.0.4",
  "structlog>=24.1.0",
  "anthropic>=0.34.0",
  "httpx>=0.27.0",
  "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.7",
  "ruff>=0.5.0",
  "mypy>=1.10.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
asyncio_mode = "auto"

